--- a/templates/easy_admin/image_viewer.html.twig
+++ b/templates/easy_admin/image_viewer.html.twig
@@ -1,3 +1,11 @@
 {% if item.image %}
-    <img width="50" src="{{field_options.base_path}}/{{item.image.image}}" />
+    <a href="#" class="easyadmin-thumbnail" data-featherlight="#easyadmin-lightbox-{{ item.image.id }}" data-featherlight-close-on-click="anywhere">
+        {# the second parameter is the name of the property with the UploadableField annotation #}
+        <img width="70" src="{{ vich_uploader_asset(item.image, 'imageFile') }}">
+    </a>
+
+    <div id="easyadmin-lightbox-{{ item.image.id }}" class="easyadmin-lightbox">
+        {# the second parameter is the name of the property with the UploadableField annotation #}
+        <img src="{{ vich_uploader_asset(item.image, 'imageFile') }}">
+    </div>
 {% endif %}
